Add smooth scrolling
Repair scrolling using tabs inside settings container. Add global smooth scrolling.

--- a/resources/index.html
+++ b/resources/index.html
@@ -134,10 +134,10 @@
       <section class="main-section">
         <nav class="side-nav">
           <fluent-tabs class="padding-y margin-y margin-x" activeid="settingsTab-container" orientation="vertical">
-            <fluent-tab id="settingsThemingTab-container"><div onclick='scrollIntoView("#settingsTheming-div")'>Theming</div></fluent-tab>
-            <fluent-tab id="settingsEditorTab-container"><div onclick='scrollIntoView("#settingsEditors-div")'>Editors</div></fluent-tab>
-            <fluent-tab id="settingsFileTab-container"><div onclick='scrollIntoView("#settingsFiles-div")'>Files</div></fluent-tab>
-            <fluent-tab id="settingsInfoTab-container"><div onclick='scrollIntoView("#settingsInfo-div")'>Info</div></fluent-tab>
+            <fluent-tab id="settingsThemingTab-container"><a href="#settingsTheming-div" style="all: unset;">Theming</a></fluent-tab>
+            <fluent-tab id="settingsEditorTab-container"><a href="#settingsEditors-div" style="all: unset;">Editors</a></fluent-tab>
+            <fluent-tab id="settingsFileTab-container"><a href="#settingsFiles-div" style="all: unset;">Files</a></fluent-tab>
+            <fluent-tab id="settingsInfoTab-container"><a href="#settingsInfo-div" style="all: unset;">Info</a></fluent-tab>
             <fluent-tab-panel></fluent-tab-panel>
             <fluent-tab-panel></fluent-tab-panel>
             <fluent-tab-panel></fluent-tab-panel>
