--- a/resources/index.html
+++ b/resources/index.html
@@ -17,6 +17,7 @@
     <script defer src="js/editor.js"></script>
     <script defer src="js/fileNav.js"></script>
     <script defer src="js/storage.js"></script>
+    <script async src="js/keybindings.js"></script>
   </head>
   <body>
     <main id="content-main" style="display: none;">
