--- a/resources/index.html
+++ b/resources/index.html
@@ -98,7 +98,7 @@
       </section>
       <nav class="bottom-nav">
         <div id="bottomInfo-div" class="flex" style="width: inherit; display: none;">
-          <div class="flex justify-start gap" style="width: 50%;>
+          <div class="flex justify-start gap" style="width: 50%;">
             <span data-fileInfo="path"></span>
           </div>
           <div class="flex justify-end gap" style="width: 50%;">
