Add file type icons

--- a/resources/index.html
+++ b/resources/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/cssRules.css">
     <link rel="stylesheet" href="css/fluentIconFont.css">
     <link rel="stylesheet" href="css/fluentFont.css">
+    <link rel="stylesheet" href="css/languageIconFont.css">
     <!-- Neutralino.js client. -->
     <script src="js/neutralino.js"></script>
     <!-- Fluecode app's source files -->
@@ -21,7 +22,7 @@
     <script defer src="js/storage.js"></script>
     <script async src="js/keybindings.js"></script>
   </head>
-  <body>
+  <body style="overflow: hidden;">
     <main id="content-main" style="display: none;">
       <nav class="top-nav justify-between">
         <div class="flex">
@@ -437,6 +438,7 @@
                           <li>Neutralino JS</li>
                           <li>Codemirror 6</li>
                           <li>Fluent WebComponents</li>
+                          <li>Devicon</li>
                           <li>Fabric UI icon font from MDL Package</li>
                           <li>Segoe UI font from MDL Package</li>
                         </ul>
